# blogdkr

./: .dockerignore  .env.example  .gitignore  Dockerfile-php  Makefile  docker-compose.dev.yml  docker-compose.yml
ansible/: Makefile  README.md  hosts.yml  prod.yml  provision.yml  vars.yml
blogsync/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  config.toml  database.db  diesel.toml  test_hasher.rs
blogsync/migration/src/: lib.rs
blogsync/migrations/2025-08-17-234936_create_users/: up.sql
blogsync/migrations/2025-08-18-084714_add_col/: down.sql  up.sql
blogsync/src/: config.rs  content_hash.rs  db.rs  dropbox_auth.rs  dropbox_client.rs  lib.rs  main.rs  schema.rs  sync.rs  token_storage.rs  webhook_server.rs
blogsync/src/schemas/: user.rs  users.rs
blogsync/sync/: date.txt
blogsync2/: .gitignore  config.toml  go.mod  go.sum  main.go  test-config.toml
blogsync2/pkg/config/: config.go
blogsync2/pkg/db/: database.go  models.go
blogsync2/pkg/dropbox/: auth.go  client.go  types.go
blogsync2/pkg/server/: server.go
blogsync2/pkg/sync/: hash.go  manager.go
blogsync2/pkg/token/: dbstorage.go  storage.go
blogsync2/sync/: config.toml
caddy/: Caddyfile
oddity/: .gitignore  Dockerfile  README.md  config.toml  contentstuff.go  edit.go  editor-compact-vue.html  editor-fixed-width.html  editor-prototype.html  editor-tailwind-vue-fixed.html  entrypoint.sh  go.mod  go.sum  main.go  middleware.go  page.go  parser.go  parser_test.go  query.go  query_renderer.go  query_test.go  types.go  wire.go
oddity/cmd/: root.go  run.go  setup.go
oddity/pkg/admin/: edit.go  rename.go  uploads.go
oddity/pkg/authz/: auth.go
oddity/pkg/cmdutil/: setup_admin_auth.go  setup_config.go  setup_tmpl.go
oddity/prototypes/: editor-simple.html  editor-tailwind-vue.html
oddity/tmpl/: auth.html  edit.html  index.html  post.html  posts.html  tmpl.go
scripts/: cursor_test.py
(+51 files in other folders)
